--- a/app/src/main/res/layout/activity_manage_group.xml
+++ b/app/src/main/res/layout/activity_manage_group.xml
@@ -5,12 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".app.ManageGroups">
 
+    <include
+        android:id="@+id/groupsToolbar"
+        layout="@layout/toolbar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <ListView
         android:id="@+id/group_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/groupsToolbar" />
 
 </RelativeLayout>
