--- a/app/src/main/res/menu/action_bar_manage_monitoring.xml
+++ b/app/src/main/res/menu/action_bar_manage_monitoring.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/create_group"
-        android:title="Create Group"
+        android:title="Parent Dashboard"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/accountInfoButton"
