--- a/app/src/main/res/layout/toolbar_navigation.xml
+++ b/app/src/main/res/layout/toolbar_navigation.xml
@@ -28,8 +28,10 @@
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:layout_weight="1"
+            android:alpha=".8"
             android:padding="0dp"
-            android:text="Map" />
+            android:text="Map"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/groupsLink"
@@ -38,8 +40,11 @@
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:layout_weight="1"
+            android:alpha=".8"
+            android:fadingEdge="none"
             android:padding="0dp"
-            android:text="Groups" />
+            android:text="Groups"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/monitoringLink"
@@ -48,8 +53,10 @@
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:layout_weight="1"
+            android:alpha=".8"
             android:padding="0dp"
-            android:text="Monitoring" />
+            android:text="Monitoring"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/messagesLink"
@@ -58,7 +65,9 @@
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:layout_weight="1"
+            android:alpha=".8"
             android:padding="0dp"
-            android:text="Messages" />
+            android:text="Messages"
+            android:textSize="13sp" />
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
