--- a/app/src/main/res/menu/action_bar_manage_groups.xml
+++ b/app/src/main/res/menu/action_bar_manage_groups.xml
@@ -7,6 +7,9 @@
         android:title="Create Group"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/parentDashboard"
+        android:title="Parent Dashboard" />
+    <item
         android:id="@+id/accountInfoButton"
         android:title="@string/account_info" />
     <item
