--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -15,7 +15,7 @@
         android:id="@+id/monitored_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <Button
@@ -37,6 +37,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/monitored_txtview"
+            android:layout_margin="8dp"
             android:layout_marginTop="8dp" />
 
         <TextView
@@ -45,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="15dp"
             android:text="@string/monitored"
             android:textSize="18sp" />
 
@@ -63,7 +64,7 @@
         android:id="@+id/monitoring_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <Button
@@ -85,6 +86,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/monitoring_txtview"
+            android:layout_margin="8dp"
             android:layout_marginTop="8dp" />
 
         <TextView
@@ -93,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="15dp"
             android:text="@string/monitoring"
             android:textSize="18sp" />
 
