--- a/app/src/main/res/menu/action_bar_dashboard.xml
+++ b/app/src/main/res/menu/action_bar_dashboard.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/parentDashboard"
-        android:title="Parent Dashboard" />
+        android:title="Parent Dashboard"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/accountInfoButton"
         android:title="@string/account_info" />
