--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -14,12 +14,26 @@
         android:layout_margin="5dp"
         android:textSize="18sp" />
 
-    <ListView
-        android:id="@+id/groupUserList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/groupNameDetail"
-        android:padding="5dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ListView
+            android:id="@+id/groupUserList"
+            android:layout_width="189dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/groupNameDetail"
+            android:padding="15dp" />
+
+        <ListView
+            android:id="@+id/parentUserList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/groupNameDetail"
+            android:padding="15dp"/>
+    </LinearLayout>
 
 </RelativeLayout>
