--- a/app/src/main/res/layout/activity_manage_messages.xml
+++ b/app/src/main/res/layout/activity_manage_messages.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.MessagesActivity"
-    android:padding="5sp">
+    tools:context=".app.ManageMessagesActivity">
+
+    <include
+        android:id="@+id/messagesToolbar"
+        layout="@layout/toolbar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/new_message_btn"
@@ -20,12 +25,12 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/messages_listvIew"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:id="@+id/messages_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/messagesToolbar"/>
 
 </RelativeLayout>
