--- a/app/src/main/res/layout/activity_grouped_messages.xml
+++ b/app/src/main/res/layout/activity_grouped_messages.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.ManageMessagesActivity">
+    tools:context=".app.GroupedMessagesActivity">
+
+    <include
+        android:id="@+id/messagesToolbar"
+        layout="@layout/toolbar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <ListView
-        android:id="@+id/messages_listview"
+        android:id="@+id/grouped_messages_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/messagesToolbar" />
 
 </RelativeLayout>
