--- a/app/src/main/res/layout/messages_layout.xml
+++ b/app/src/main/res/layout/messages_layout.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5sp">
+    android:padding="10sp">
 
     <TextView
-        android:id="@+id/message_context"
+        android:id="@+id/message_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/conversation_name"
+        android:layout_below="@+id/message_context"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textSize="14sp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="39dp" />
 
     <TextView
-        android:id="@+id/message_header"
+        android:id="@+id/message_context"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
