--- a/app/src/main/res/menu/action_bar_messages.xml
+++ b/app/src/main/res/menu/action_bar_messages.xml
@@ -2,7 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/group_details_btn"
-        android:title="Details"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/broadcast_message"
+        android:title="@string/broadcast_message" />
+    <item
+        android:id="@+id/parents_message"
+        android:title="@string/parents_message" />
 </menu>
