--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -26,14 +26,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <ListView
             android:id="@+id/groupUserList"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/groupNameDetail"
             android:layout_weight="1"
             android:padding="25dp" />
 
@@ -41,8 +40,6 @@
             android:id="@+id/parentUserList"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/groupNameDetail"
             android:layout_weight="1"
             android:padding="25dp" />
     </LinearLayout>
