--- a/app/src/main/res/menu/action_bar_message_child.xml
+++ b/app/src/main/res/menu/action_bar_message_child.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/group_message"
         android:title="@string/group_message" />
+    <item
+        android:title="@string/emergency_message"
+        android:id="@+id/emergency_message"/>
 </menu>
