--- a/app/src/main/res/menu/action_bar_dashboard.xml
+++ b/app/src/main/res/menu/action_bar_dashboard.xml
@@ -2,9 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/emergency_message"
+        android:title="@string/emergency_button"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/parentDashboard"
-        android:title="Parent Dashboard"
-        app:showAsAction="ifRoom" />
+        android:title="@string/parentDashboard"
+        app:showAsAction="always" />
     <item
         android:id="@+id/accountInfoButton"
         android:title="@string/account_info" />
