--- a/app/src/main/res/layout/toolbar_navigation.xml
+++ b/app/src/main/res/layout/toolbar_navigation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linkToolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="0dp"
-            android:layout_weight="1"
+            android:layout_weight=".9"
             android:alpha=".7"
             android:padding="0dp"
             android:text="Map"
@@ -56,13 +55,25 @@
             android:layout_weight="1"
             android:alpha=".7"
             android:padding="0dp"
-            android:text="Monitoring"
+            android:text="Monitor"
+            android:textSize="13sp" />
+
+        <Button
+            android:id="@+id/parentsLink"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
+            android:layout_weight="1"
+            android:alpha=".7"
+            android:padding="0dp"
+            android:text="Parents"
             android:textSize="13sp" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:orientation="horizontal">
 
             <Button
@@ -90,9 +101,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="6dp"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 map:layout_constraintBottom_toBottomOf="parent"
                 map:layout_constraintEnd_toEndOf="@+id/messagesLink"
                 map:layout_constraintHorizontal_bias="1.0"
