--- a/app/src/main/res/layout/toolbar_navigation.xml
+++ b/app/src/main/res/layout/toolbar_navigation.xml
@@ -70,6 +70,15 @@
             android:text="Parents"
             android:textSize="13sp" />
 
+        <Button
+            android:id="@+id/permissionLink"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
+            android:layout_width="14dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Permissions"
+            android:textSize="13sp" />
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
