--- a/app/src/main/res/layout/permission_layout_details.xml
+++ b/app/src/main/res/layout/permission_layout_details.xml
@@ -16,6 +16,7 @@
         android:layout_height="34dp"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/btnDecline"
+        android:onClick="myAcceptHandler"
         android:text="Accept" />
 
     <Button
