--- a/app/src/main/res/layout/permission_layout_details.xml
+++ b/app/src/main/res/layout/permission_layout_details.xml
@@ -7,7 +7,7 @@
         android:id="@+id/txtPermissionFrom"
         android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:text="Request From:"
+        android:text="@string/request_from"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <Button
